# ppit-image-to-word

./: .gitignore  DEPLOYMENT.md  NEXT_STEPS.md  PRD.txt  README.md  app.py  main.py  pyproject.toml  requirements.txt  todolist.txt
